# oasesagent

./: .gitattributes  README.md  id_rsa  id_rsa.pub
Oases/: Oases text.txt  Project Architecture.txt  links.txt
bubble/: pyvenv.cfg
linkedin-poster/: docker-compose.yml
linkedin-poster/backend/: dockerfile  pyproject.toml  requirements.txt
linkedin-poster/backend/app/: __init__.py  models.py  routes.py  tasks.py  utils.py
linkedin-poster/frontend/: dockerfile  package-lock.json
linkedin-poster/frontend/public/: index.html
linkedin-poster/frontend/src/: App.js
linkedin-poster/streamlit_app/: app.py
